kubernates-manifests/staging/sandbox-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sandbox
  labels:
    app: sandbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sandbox
  template:
    metadata:
      labels:
        app: sandbox
    spec:
      containers:
        - name: sandbox
          image: sandbox:latest
          resources:
            limits:
              cpu: "200m"
              memory: "400Mi"
            requests:
              cpu: "100m"
              memory: "200Mi"
